force-app/main/default/objects/Food_Item__c/Food_Item__c.object-meta.xml
<CustomObject>
    <description>A food item available at the restaurant</description>
    <label>Food Item</label>
    <nameField>
        <label>Food Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>