force-app/main/default/objects/Food_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the food item</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>