force-app/main/default/objects/Food_Item__c/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <description>The dietary restrictions that this food item complies with</description>
    <label>Dietary Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Jain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>