force-app/main/default/objects/Food_Item__c/fields/Spicy__c.field-meta.xml
<CustomField>
    <fullName>Spicy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the food item is spicy</description>
    <label>Spicy</label>
    <type>Checkbox</type>
</CustomField>